[package]
name = "batt"
version = "0.1.0"
authors = ["gliontos <georgeliontos98@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/GeorgeLS/batt"
license = "GPL-2.0"
exclude = ["build/**/*.o", "doc/**/*.html"]
include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.0"
logos-derive = "0.11.0"
colored = "1.9.3"
lazy_static = "1.4.0"